codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__cyber_policy_error_event_snapshot.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 774
expression: rendered
---
ⓘ This content can’t be shown
  We take extra care with some cybersecurity requests. If you’re doing
  authorized security work, apply for Daybreak to get broader access.
  Learn more: https://help.openai.com/en/articles/20001326
  Apply for Daybreak: https://gptauth.ruijie.com.cn/cyber
